* Updated AuthCodes.h * Updated Achievement Criteria. * Updated GM achievement code, GM's can no longer save achievement data, and any data is deleted on startup. * Fixed Character Deletion. * Fixed groups, forgot that uint32. * Messages always last 30 days, whether COD or not. * Line adjustments in NPCHandler.cpp. * Fixed Pet Action opcode, targetguid is always sent. Its not finished, but this is needed at the moment. * Updated some quest log information in Player.cpp.

--- a/src/AuthServer/Makefile.am
+++ b/src/AuthServer/Makefile.am
@@ -18,8 +18,8 @@ AuthServer_SOURCES = \
     AuthConsole.h \
     AuthOpcodes.cpp \
     AuthOpcodes.h \
-	AuthStdAfx.cpp \
-	AuthStdAfx.h \
+	AuthServer.cpp \
+	AuthServer.h \
 	AutoPatcher.h \
 	AutoPatcher.cpp \
 	Main.cpp \
