* Implemented empty spell effect SpellEffectDetect. * Implemented dummy scripts for Riding spells. * Code cleanup on several files * Implemented fix for 2 small memleaks * Made GMs able to cast spells on theirself.. * Code cleanup...

--- a/src/libs/Makefile.am
+++ b/src/libs/Makefile.am
@@ -30,8 +30,8 @@ noinst_LIBRARIES = libshared.a
 	Threading/Mutex.cpp \
 	Threading/ThreadPool.cpp \
 	Storage.h \
-	arctic_getopt.h \
-	arctic_getopt.cpp \
+	Getopt.h \
+	Getopt.cpp \
 	CrashHandler.h \
 	CrashHandler.cpp \
 	Auth/BigNumber.cpp \
