--- a/src/libs/Makefile.am
+++ b/src/libs/Makefile.am
@@ -19,8 +19,8 @@ libshared_a_SOURCES = \
     Threading.h \
     Timer.h \
     UnixThreading.h \
-    Utilities/Util.h \
-    Utilities/Util.cpp \
+    Utilities/Utility.h \
+    Utilities/Utility.cpp \
     WinThreading.h \
     WorldPacket.h \
     crc32.cpp \
@@ -118,4 +118,4 @@ libshared_a_SOURCES = \
     Collision/g3dlite/Vector3.cpp \
     Collision/g3dlite/Vector4.cpp \
     Collision/g3dlite/format.cpp
-    
+
