--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,1 +1,5 @@
+# Arctic MMORPG Server Software
+# Copyright (c) 2008-2011 Arctic Server Team
+# See COPYING for license details.
+
 SUBDIRS = libs AuthServer WorldServer scripts
