--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-#ignore thumbnails created by windows
+#ignore for windows
 Thumbs.db
-#Ignore files build by Visual Studio
+#Ignore for vs
 *.obj
 *.ncb
 *.suo
@@ -19,3 +19,30 @@ Thumbs.db
 *.manifest
 *.pch
 *.res
+#ignore for by linux 
+configure
+depcomp
+config.guess
+config.h
+config.sub
+config.status
+stamp-h1
+config.h.in
+libtool
+autom4te.cache
+missing
+aclocal.m4
+install-sh
+Makefile
+Makefile.in
+.deps
+.libs
+*.a
+#ignore for by mac os
+.DS_Store
+# Top-level generic files
+#
+bin
+build
+!.gitignore
+
