--- a/win/VC100/libs.vcxproj
+++ b/win/VC100/libs.vcxproj
@@ -263,10 +263,10 @@
     <ClCompile Include="..\..\src\libs\Collision\g3dlite\Vector3.cpp" />
     <ClCompile Include="..\..\src\libs\Collision\g3dlite\Vector4.cpp" />
     <ClCompile Include="..\..\src\libs\Config\Config.cpp" />
-    <ClCompile Include="..\..\src\libs\Database\Database.cpp" />
-    <ClCompile Include="..\..\src\libs\Database\DBC.cpp" />
-    <ClCompile Include="..\..\src\libs\Database\dbcfile.cpp" />
-    <ClCompile Include="..\..\src\libs\Database\DBCStores.cpp" />
+    <ClCompile Include="..\..\src\libs\DataStorage\Database.cpp" />
+    <ClCompile Include="..\..\src\libs\DataStorage\DBC.cpp" />
+    <ClCompile Include="..\..\src\libs\DataStorage\dbcfile.cpp" />
+    <ClCompile Include="..\..\src\libs\DataStorage\DBCStores.cpp" />
     <ClCompile Include="..\..\src\libs\Network\CircularBuffer.cpp" />
     <ClCompile Include="..\..\src\libs\Network\Socket.cpp" />
     <ClCompile Include="..\..\src\libs\Network\SocketMgrWin32.cpp" />
@@ -338,13 +338,13 @@
     <ClInclude Include="..\..\src\libs\Collision\g3dlite\G3D\Vector4.h" />
     <ClInclude Include="..\..\src\libs\Config\Config.h" />
     <ClInclude Include="..\..\src\libs\Config\ConfigEnv.h" />
-    <ClInclude Include="..\..\src\libs\Database\Database.h" />
-    <ClInclude Include="..\..\src\libs\Database\DatabaseEnv.h" />
-    <ClInclude Include="..\..\src\libs\Database\Field.h" />
-    <ClInclude Include="..\..\src\libs\Database\DataStore.h" />
-    <ClInclude Include="..\..\src\libs\Database\DBC.h" />
-    <ClInclude Include="..\..\src\libs\Database\dbcfile.h" />
-    <ClInclude Include="..\..\src\libs\Database\DBCStores.h" />
+    <ClInclude Include="..\..\src\libs\DataStorage\Database.h" />
+    <ClInclude Include="..\..\src\libs\DataStorage\DatabaseEnv.h" />
+    <ClInclude Include="..\..\src\libs\DataStorage\Field.h" />
+    <ClInclude Include="..\..\src\libs\DataStorage\DataStore.h" />
+    <ClInclude Include="..\..\src\libs\DataStorage\DBC.h" />
+    <ClInclude Include="..\..\src\libs\DataStorage\dbcfile.h" />
+    <ClInclude Include="..\..\src\libs\DataStorage\DBCStores.h" />
     <ClInclude Include="..\..\src\libs\Network\CircularBuffer.h" />
     <ClInclude Include="..\..\src\libs\Network\ListenSocketWin32.h" />
     <ClInclude Include="..\..\src\libs\Network\Network.h" />
