* fix updated enum RankTitles * Fixed updated enum Races * Fixed duel bug
 Casting a spell with cast time not 0 and multiple effects (like Fireball id 133) could have killed a Player in duels. In case the first effect made the duel finish, the second effect was still applied, even if it would have caused damage, killing one of the Players dueling.

Signed-off-by: schnek <tolstikov.misha@gmail.com>

--- a/win/VC100/WorldServer.vcxproj
+++ b/win/VC100/WorldServer.vcxproj
@@ -366,6 +366,7 @@
     <ClCompile Include="..\..\src\WorldServer\SpellHandler.cpp" />
     <ClCompile Include="..\..\src\WorldServer\SpellTarget.cpp" />
     <ClCompile Include="..\..\src\WorldServer\Stats.cpp" />
+    <ClInclude Include="..\..\src\libs\Arctic.cpp" />	
     <ClCompile Include="..\..\src\WorldServer\StdAfx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -465,6 +466,7 @@
     <ClInclude Include="..\..\src\WorldServer\SpellNameHashes.h" />
     <ClInclude Include="..\..\src\WorldServer\Stats.h" />
     <ClInclude Include="..\..\src\WorldServer\StdAfx.h" />
+    <ClInclude Include="..\..\src\libs\Arctic.h" />
     <ClInclude Include="..\..\src\WorldServer\StrandOfTheAncients.h" />
     <ClInclude Include="..\..\src\WorldServer\TaxiMgr.h" />
     <ClInclude Include="..\..\src\WorldServer\TerrainMgr.h" />
