* Fixed transfers from the ../libs/Timer.h to ../libs/Utilities/Timer.h

--- a/src/libs/Makefile.am
+++ b/src/libs/Makefile.am
@@ -17,7 +17,7 @@ libshared_a_SOURCES = \
     MemoryLeaks.h \
     Singleton.h \
     Threading.h \
-    Timer.h \
+    Utilities/Timer.h \
     UnixThreading.h \
     Utilities/Utility.h \
     Utilities/Utility.cpp \
