--- a/win/VC100/libs.vcxproj
+++ b/win/VC100/libs.vcxproj
@@ -375,7 +375,7 @@
     <ClInclude Include="..\..\src\libs\Singleton.h" />
     <ClInclude Include="..\..\src\libs\StackBuffer.h" />
     <ClInclude Include="..\..\src\libs\StackWalker.h" />
-    <ClInclude Include="..\..\src\libs\Timer.h" />
+    <ClInclude Include="..\..\src\libs\Utilities\Timer.h" />
     <ClInclude Include="..\..\src\libs\Utilities\Utility.h" />
     <ClInclude Include="..\..\src\libs\WoWGuid.h" />
     <ClInclude Include="..\..\src\libs\Log.h" />
