* added You can now set which arena season it is * fixed Raid icons no longer crash your client * fixed You can now make arena charters correctly

--- a/contrib/conf/WorldServer.conf
+++ b/contrib/conf/WorldServer.conf
@@ -655,3 +655,18 @@
 #########################################################################################################
 
 <DeathKnight OnePerRealm="1" RequiredLevel="55">
+
+#########################################################################################################
+# Arena Seasons
+#
+#    You can use this to set the progress and the currenct season
+#
+#    Season
+#        Has to be higher than 0 for arenas to work.
+#     Progress
+#        Sets the progress, 0 = finished, 1 = in progress
+#
+#########################################################################################################
+
+<Arena Season = "8"
+	Progress = "1">
