* fixed codenamefiles2codestyle & lunix fixed

--- a/src/WorldServer/Makefile.am
+++ b/src/WorldServer/Makefile.am
@@ -73,6 +73,8 @@ WorldServer_SOURCES = \
     GuildHandler.cpp \
     HonorHandler.cpp \
     HonorHandler.h \
+    IsleOfConquest.cpp \
+    IsleOfConquest.h \
     Item.cpp \
     Item.h \
     ItemHandler.cpp \
