* added start gold amount change

--- a/contrib/conf/WorldServer.conf
+++ b/contrib/conf/WorldServer.conf
@@ -170,6 +170,10 @@
 #        each other's groups and guilds.
 #        Default: 0
 #
+#		StartGold
+#        Amount gold from start change 
+#        Default: 0
+#
 #    CheckProfessions
 #        Warn player that he has more then 2 professions,
 #        and kick player after 3 minutes, granting time to unlearn
@@ -221,6 +225,7 @@
         FreeGuildCharters = "0"
         Collision = "1"
         CrossFactionInteraction = "0"
+		StartGold="0"
         CheckProfessions = "1"
         ForceRobesForGM = "1"
         CleanDatabase = "1"
